# simple-cabal

./: .stack-all  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  Makefile  README.md  SimpleCabal.hs  simple-cabal.cabal
.github/workflows/: build.yml
src/: SimpleCabal.hs
