cabal-version:       >= 1.10
name:                simple-cabal
version:             0.2.1
synopsis:            Cabal compatibility wrapper library
description:         Find and read .cabal files, and
                     a Cabal dependency compatibility layer.
homepage:            https://github.com/juhp/simple-cabal
bug-reports:         https://github.com/juhp/simple-cabal/issues
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019-2020,2022-2023,2025 Jens Petersen
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
                   , ChangeLog.md
tested-with:         GHC == 9.14.1, GHC == 9.12.2, GHC == 9.10.2, GHC == 9.8.4,
                     GHC == 9.0.2, GHC == 9.2.8, GHC == 9.4.8, GHC == 9.6.7,
                     GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5, GHC == 8.4.4,
                     GHC == 8.2.2, GHC == 8.0.2

source-repository head
  type:                git
  location:            https://github.com/juhp/simple-cabal.git

library
  exposed-modules:     SimpleCabal

  build-depends:       base < 5,
                       bytestring,
                       Cabal,
                       directory,
                       filepath,
                       safe

  default-language:    Haskell2010

  GHC-Options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
